# studypartner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css
.claude/: settings.local.json
app/: config.py  main.py  pyproject.toml  storage.py
app/models/: __init__.py  entities.py
app/routes/: modules.py  plans.py  users.py
app/services/: auth_service.py  feedback_service.py  ingestion_service.py  personalization_service.py  planning_service.py
app/src/models/: __init__.py  entities.py
app/src/models/services/: ai_service.py  auth_service.py  content_analysis_service.py  ingestion_service.py  microsoft_auth_service.py  moodle_service.py  planning_service.py  study_pack_service.py  sync_service.py
app/src/routes/: ai.py  auth.py  modules.py  moodle.py  packs.py  plans.py  selection.py  sync.py  units.py  users.py
app/src/scripts/: cleanup_orphan_uploads.py
app/src/tests/: conftest.py  test_account_deletion.py  test_ai_quota.py  test_auth_and_materials.py  test_critical_ux_fixes.py  test_ics_import.py  test_idempotency.py  test_jwt_revocation.py  test_module_ownership.py  test_moodle_launch_and_materials.py  test_observability.py  test_ollama_backend.py  test_password_policy.py  test_password_reset.py  test_pipeline.py  test_planner.py  test_production_fixes.py  test_ratelimit_key.py  test_screen_endpoints.py  test_secret_gating.py  test_security_headers.py  test_selection_ownership.py  test_unit_parsing.py  test_units_editor.py  test_user_settings_update.py
app/src/utils/: auth.py  crypto.py  example_flow.py  logging_config.py  mailer.py  metrics.py  quota.py  ratelimit.py  time.py
app/utils/: auth.py  example_flow.py
audit/: MOODLE_INTEGRATION.md  NAVIGATION_MAP.md  README.md  SCREEN_INVENTORY.md  UNREACHABLE.md  seed.py
frontend/: Dockerfile  index.html  (+10 more)
(+121 files in other folders)
