[project]
name = "studypartner"
version = "0.2.0"
description = "AI-powered adaptive study planning engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.9",
  "cryptography>=43.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]
pdf = [
  "pypdf>=4.0.0",
  "python-docx>=1.1.0"
]
ai = [
  "anthropic>=0.40.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
